--- a/style.css
+++ b/style.css
@@ -73,6 +73,8 @@ html,body{
 }
 #pbot{
     display: flex;
+    align-items: centre;
+    justif-content: centre;
     flex-wrap: wrap;
     padding: 8px;
     height: calc(100% - 50px);
